--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,9 @@
     <h1>Choose a Model to Run</h1>
     <nav>
         <ul>
-            <li><a href="regression.html">Regression Models</a></li>
-            <li><a href="sharpe_ratio.html">Sharpe Ratio Calculation</a></li>
-            <li><a href="investment_growth.html">Investment Growth Calculation</a></li>
+            <li><a href="regression">Regression Models</a></li>
+            <li><a href="sharpe_ratio">Sharpe Ratio Calculation</a></li>
+            <li><a href="investment_growth">Investment Growth Calculation</a></li>
         </ul>
     </nav>
 </body>
