--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Programs</title>
+    <title>Interactive Finance</title>
     <link rel="stylesheet" href="/static/style.css">
     <style>
         body {
@@ -56,6 +56,7 @@
         <ul>
             <li><a href="regression">Regression Models</a></li>
             <li><a href="sharpe_ratio">Sharpe Ratio Calculation</a></li>
+            <li><a href="stock_price_performance">Stock Performance Tracker</a></li>
             <li><a href="investment_growth">Investment Growth Calculation</a></li>
         </ul>
     </nav>
