--- a/templates/investment_growth.html
+++ b/templates/investment_growth.html
@@ -29,7 +29,6 @@
             margin-bottom: 40px;
             font-size: 2.5em;
             color: black;
-            animation: fadeIn 2s ease-in-out;
         }
         .content, .add-more-content {
             display: flex;
@@ -65,6 +64,7 @@
             background-color: #4CAF50;
             color: white;
             cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
         }
         button:hover {
             background-color: #45a049;
