--- a/templates/portfolio_optimizer.html
+++ b/templates/portfolio_optimizer.html
@@ -3,17 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Regression Models</title>
+    <title>Portfolio Optimizer</title>
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="icon" href="/static/images/assetanalysis.ico" type="image/x-icon">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
-        .container {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 10px;
-            box-sizing: border-box;
-        }
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+        
         body {
             display: flex;
             flex-direction: column;
@@ -21,86 +17,142 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #72EDF2 10%, #5151E5 100%);
+            font-family: 'Roboto', Arial, sans-serif;
+            background: linear-gradient(135deg, #72EDF2, #5151E5);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 20px;
             box-sizing: border-box;
         }
+
         h1 {
-            margin-top: 100px; /* Adjust this to accommodate the fixed header */
+            margin-top: 60px;
             margin-bottom: 40px;
-            font-size: 2.5em;
+            font-size: 3em;
+            letter-spacing: 2px;
             color: black;
         }
+
         form {
             display: flex;
             flex-direction: column;
             align-items: center;
             background-color: rgba(0, 0, 0, 0.5);
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
             width: 100%;
-            max-width: 500px;
+            max-width: 800px;
             box-sizing: border-box;
         }
-        label, select, input, button {
+
+        label, input, button {
             margin: 10px 0;
             width: 100%;
         }
-        #result {
-            margin-top: 20px;
-            width: 100%;
-            max-width: 1600px;
-            justify-content: center;
-            align-items: center;
-            display: none;
+
+        input {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            background-color: white;
+            color: black;
         }
-        pre {
-            text-align: left;
-            white-space: pre-wrap;
-        }
+
         button {
             padding: 10px;
             background-color: #4CAF50;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 5px;
             cursor: pointer;
-            margin-top: 20px;
+            transition: background-color 0.3s, transform 0.3s;
         }
+
         button:hover {
             background-color: #45a049;
+            transform: scale(1.05);
         }
-        .ticker-table {
+
+        #result {
             margin-top: 20px;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            display: none;
             width: 100%;
-            max-width: 500px;
+            max-width: 1000px;
             box-sizing: border-box;
         }
-        .ticker-table table {
+
+        #sharpeRatioGraph {
             width: 100%;
-            border-collapse: collapse;
-            color: white;
+            height: 600px;
         }
-        .ticker-table th, .ticker-table td {
+
+        pre {
+            text-align: left;
+            white-space: pre-wrap;
             padding: 10px;
-            border: 1px solid white;
+            background-color: rgba(0, 0, 0, 0.5);
+            border-radius: 5px;
+            color: white;
+            margin-top: 20px;
+        }
+
+        #loading {
+            display: none;
+            margin-top: 20px;
             text-align: center;
         }
-        .ticker-table th {
-            background-color: #5151E5;
+
+        #backButton {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
         }
+
+        #backButton:hover {
+            background-color: #45a049;
+            transform: scale(1.05);
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateY(50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* Responsive Design */
         @media (max-width: 600px) {
             h1 {
                 font-size: 2em;
-                margin-top: 70px; /* Adjust this to accommodate the fixed header */
             }
             form {
                 width: 100%;
@@ -110,112 +162,69 @@
             button {
                 padding: 8px;
             }
+            #sharpeRatioGraph {
+                height: 400px;
+            }
         }
     </style>
 </head>
 <body>
     {% include 'header.html' %}
-    <h1>Regression Models</h1>
-    <form id="regressionForm">
-        <label for="stock">Enter Stock Ticker:</label>
-        <input type="text" id="stock" name="stock">
-
-        <div id="start_date_container">
-            <label for="start_date">Select Start Date:</label>
-            <select id="start_date" name="start_date">
-                <option value="ipo">IPO</option>
-                <option value="2007-01-01">GFC</option>
-            </select>
-        </div>
-
+    <h1>Sharpe Ratio Calculation</h1>
+    <form id="sharpeRatioForm">
+        <label for="tickers">Enter Tickers (comma separated):</label>
+        <input type="text" id="tickers" name="tickers" value="">
         <button type="submit">Run</button>
     </form>
-    <div class="ticker-table">
-        <table>
-            <thead>
-                <tr>
-                    <th>Index</th>
-                    <th>Ticker</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>S&P 500</td>
-                    <td>^SPX or ^GSPC</td>
-                </tr>
-                <tr>
-                    <td>Nasdaq 100</td>
-                    <td>^NDX or ^IXIC</td>
-                </tr>
-                <tr>
-                    <td>Dow Jones</td>
-                    <td>^DJI</td>
-                </tr>
-            </tbody>
-        </table>
+    <div id="result">
+        <div id="sharpeRatioGraph"></div>
+        <pre id="sharpeRatioText"></pre>
     </div>
-    <div class="ticker-table">
-        <table>
-            <thead>
-                <tr>
-                    <th>Cryptocurrency</th>
-                    <th>Ticker</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Bitcoin</td>
-                    <td>BTC-USD</td>
-                </tr>
-                <tr>
-                    <td>Ethereum</td>
-                    <td>ETH-USD</td>
-                </tr>
-                <tr>
-                    <td>Solana</td>
-                    <td>SOL-USD</td>
-                </tr>
-            </tbody>
-        </table>
+    <div id="loading">
+        <div style="width:300px;height:300px;margin:0 auto;">
+            <iframe src="https://giphy.com/embed/RgzryV9nRCMHPVVXPV" width="100%" height="100%" style="border:none" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </div>
+        <p>Generating portfolio, please wait...</p>
     </div>
-    <div id="result"></div>
-    <button onclick="window.location.href='/'">Back to Home</button>
+    <button id="backButton" onclick="window.location.href='/'">Back to Home</button>
     <script>
-        document.getElementById('regressionForm').addEventListener('submit', function(e) {
+        document.getElementById('sharpeRatioForm').addEventListener('submit', function(e) {
             e.preventDefault();
-            const stock = document.getElementById('stock').value.toUpperCase();
-            const start_date = document.getElementById('start_date').value;
+            const tickers = document.getElementById('tickers').value.split(',').map(ticker => ticker.trim().toUpperCase());
+            const graphDiv = document.getElementById('sharpeRatioGraph');
+            const text = document.getElementById('sharpeRatioText');
+            const result = document.getElementById('result');
+            const loading = document.getElementById('loading');
 
-            const data = {
-                stock: stock,
-                start_date: start_date
-            };
+            loading.style.display = 'block';
+            result.style.display = 'none';
+            graphDiv.style.display = 'none';
+            text.textContent = '';
 
-            fetch('/run_regression', {
+            fetch('/run_sharpe_ratio', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify(data)
+                body: JSON.stringify({ tickers: tickers })
             })
             .then(response => response.json())
             .then(data => {
+                loading.style.display = 'none';
                 const graph = JSON.parse(data.graph);
-                const resultDiv = document.getElementById('result');
-                const regressionPlotDiv = document.createElement('div');
-                regressionPlotDiv.id = 'regressionPlot';
-                regressionPlotDiv.style.width = '100%';
-                regressionPlotDiv.style.height = '800px';
-                resultDiv.innerHTML = '';  // Clear previous plot if any
-                resultDiv.appendChild(regressionPlotDiv);
-                Plotly.newPlot('regressionPlot', graph.data, graph.layout, {responsive: true});
-                
-                result.style.display = 'block'; // Show the result div when data is ready
+                Plotly.newPlot('sharpeRatioGraph', graph.data, graph.layout, {responsive: true});
+                graphDiv.style.display = 'block';
+                Plotly.relayout('sharpeRatioGraph', {
+                    'xaxis.autorange': true,
+                    'yaxis.autorange': true
+                });
+                text.textContent = data.text;
+                result.style.display = 'block';
 
-                // Force a resize to fill the entire space
                 window.dispatchEvent(new Event('resize'));
             })
             .catch(error => {
+                loading.style.display = 'none';
                 console.error('Error:', error);
             });
         });
